Windows: Use focusWindow() as native dialog parent when 0 is passed.

A parent is required, otherwise the application gets deactivated when
the dialog closes. The same is done in Qt 4.

Task-number: QTBUG-36039

Change-Id: I56688b3259f1d207edd1bec499afd1365ae511dc
Reviewed-by: Joerg Bornemann <joerg.bornemann@digia.com>

cregit: 73a98ccc4677056416f5de8797c91097e1000a0c https://github.com/qt/qtbase/commit/73a98ccc4677056416f5de8797c91097e1000a0c